--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest --environment jsdom"
   },
   "dependencies": {
+    "firebase": "^12.6.0",
     "openai": "^6.9.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
